--- a/Project/TODO.txt
+++ b/Project/TODO.txt
@@ -1,3 +1,8 @@
 Add some try-catch in the class signal
-Correct the inverse fourier transform
+Correct the inverse fourier transform/ matlab and calculate by hand
+Change the value of 44100, do it as a member
+readme
+Fourier filter
+median filter
+See where to optimize the code (beautiful code)
 
