Adding the README not finished and updating the TODO.txt

--- a/Project/TODO.txt
+++ b/Project/TODO.txt
@@ -5,5 +5,6 @@
 5) median filter
 6) See where to optimize the code (beautiful code)
 7) Need to check why the histogram doesn't give the right amplitude of the signal.
-8) Need to check the histogram error handler to see if it is correct (we need to see the message).
-
+8) Need to check the histogram error handler to see if it is correct (we need to see the message) and also for the other ones
+9) Construct a signal from a frequence file.
+10) Add the text in the file we give back
